23-01-31 포스팅 추가

--- a/_posts/2023-01-06-블로그 시작.markdown
+++ b/_posts/2023-01-06-블로그 시작.markdown
@@ -6,7 +6,7 @@ date:   2023-01-06 19:48:12
 기록의 중요성을 알게 되었다.
 올해는 내 생각이던, 다른 사람들의 생각이던 기록을 해야겠다.
 
-내 생각을 기록함으로써 한번 더 정리하고, 다른 관점에서 관찰할 수 있다.
-다른 사람의 생각을 옮기는 것은, 다양한 생각들을 읽고 곱씹으며 나의 세상을 확장해 나갈 수 있다.
+내 생각을 기록함으로써 한번 더 정리하고, 다른 관점에서 관찰할 수 있을 것 같고,
+다른 사람의 생각을 옮기는 것은, 다양한 생각들을 읽고 곱씹으며 내 세상을 확장해 나갈 수 있지 않을까?
 
-그리고 글 쓰는 연습도 좀 해야한다. 아무리 좋은 생각을 가지고 있어도 남에게 보여줄 수 없으면 그저 한낱 공상이 될 뿐이다.
+그리고 글 쓰는 연습도 좀 해야한다... 아무리 좋은 생각을 가지고 있어도 남에게 보여줄 수 없으면 그저 한낱 공상이 될 것 같다.
