--- a/_posts/2023-12-07-내 블로그 구글에 띄우기.markdown
+++ b/_posts/2023-12-07-내 블로그 구글에 띄우기.markdown
@@ -6,16 +6,18 @@ date:   2023-12-08 20:24:22+0900
 
 ## 부제: 엄마 나 구글 나왔어
 
-대학교때는 티스토리를 만들어서 내가 관심있던 것이나 코테 연습 케이스 글을 올렸었다. 이제 취업을 했으니 관련된 기술 문서를 번역하거나, 업무를 하며/혹은 업무와 상관없이 재미있어 보이는것을 올리기 위해 조금 Tech-y 한 블로그를 만들어 보려 했다.
-여기 저기 다양한 기술 블로그를 지나다니며 봤을 때, 도메인이 github.io로 찍히는 블로그들이 꽤 많았다. 도메인부터 눈에 끌려 "이건 뭐지...!" 하고 알아보니, Github 자체적으로 {유저네임}.github.io 로 Repo를 만들면 정적 호스팅을 해준다고 한다! 멋지다!
+대학교때는 티스토리를 만들어서 내가 관심있던 것이나 코테 연습 케이스 글을 올렸었다. 이제 취업을 했으니 관련된 기술 문서를 번역하거나, 업무를 하며/혹은 업무와 상관없이 재미있어 보이는것을 올리기 위해 조금 힘이 들어간 기술 블로그를 만들어 보고 싶었다.
+다양한 기술 블로그를 지나다니며 봤을 때, 도메인이 github.io로 찍히는 블로그들이 꽤 많았다. 도메인부터 눈에 끌려 알아보니, Github 자체적으로 {유저네임}.github.io 로 Repo를 만들면 정적 호스팅을 해준다고 한다. 멋져 보였다!
 
 ![](/assets/img/11250D3D5163DBE434.jpeg)
 
-그래서 결과물은 현재 보고 있는 이 블로그. 개인 Github 계정에 github.io 도메인을 사용하고, Jekyll 을 써서 구성하였다. 마크다운으로 글을 올려주면 자동으로 페이지를 만들어 주는게 좋았고, 대학교때부터 노션을 사용했기에, 마크다운으로 글을 쓰는게 친숙했다.
+그래서 결과물은 현재 보고 있는 이 블로그. 개인 Github 계정이 제공해주는 github.io 도메인을 사용하고, Jekyll 을 써서 구성하였다. 대학교때부터 노션을 사용한 나로서는 마크다운으로 글을 쓰는게 친숙했기에, 마크다운으로 글을 올려주면 자동으로 페이지를 만들어 주는게 좋았다. 
 
-글을 올리겠다는 당찬 마음을 가지고 만든 블로그는, 글 두개를 올리고 바쁜 업무(핑계다)와 갑작스런 복싱 시작(역시 핑계다), 개인사(이것도 핑계)로 정체되어 있었다. 최근까지는. 
+글을 올리겠다는 당찬 마음을 가지고 만든 블로그는, 글 두개를 올리고 최근까지 바쁜 업무(핑계다)와 갑작스런 복싱 시작(역시 핑계다), 새로운 인간관계 개인사(이것도 핑계)로 정체되어 있었다.
 
 하지만 이제 [글또](https://www.notion.so/zzsza/ac5b18a482fb4df497d4e8257ad4d516) 9기를 시작하게 되어 2주에 한번씩 글을 올리고, 이 습관을 계속해서 이어가는게 목표다. 그래서 먼지만 날리던 이 블로그에 갑자기 폰트도 좀 가독성 높으면서 이뻐보이는 것으로로 바꾸고, 카운터도 넣을 예정이다. 근데 문제는 내 블로그가 구글에서 검색이 되지 않는다는 것.
+
+이 문제를 해결하기 위해, 관련 주제로 많은 검색을 해 봤고 크게 두가지 방식을 확인할 수 있었다. 하나는 어떤 검색엔진 봇이 어떻게 내 사이트를 접근할 수 있는지(robots.txt) 정해주는 것, 나머지 하나는 구글에 더 직접적으로 내 사이트를 인덱스 할 수 있도록 정보를 제공하는 것(구글 검색 대시보드에 등록)이었다. 이번 글에서는 두 가지를 어떻게 진행했는지 정리해보았다.
 
 ---
 
@@ -103,8 +105,8 @@ gems:
 ---
 
 아직 사이트맵을 추가한지 얼마 되지 않아 인덱싱이 제대로 되지는 않은 상태이다. 다만, 일련의 과정을 진행하면서 티스토리나 다른 서비스형 블로그가 아닌 직접 구성한 블로그/사이트를 어떻게 다른 검색 엔진이 찾아오는지 조금이나마 감이 잡히는 것 같다.
-이 쪽으로 더 파보면 SEO(Search Engine Optimization) 분야가 있는 것 같은데, 나중에 더 찾아보면 재미있을 것 같다. 뭔가 최근 유튜버들이 어떻게 하면 알고리즘을 잘 타게 연구하는 것의 원조라고 해야할까?
+이 쪽으로 더 파보면 SEO(Search Engine Optimization) 분야가 있는 것 같은데, 나중에 더 찾아보면 재미있을 것 같다. 뭔가 최근 유튜버들이 어떻게 하면 알고리즘을 잘 타게 연구하는 것의 원조같이 보인다.
 
 그리고, Google Search Console 도 알고 있으면 나중에 써먹을 곳이 많을 것 같다. Core Web Vital같은 경우는 회사에서 해당 메트릭을 얻기 위해 별도로 서비스를 쓴다거나 솔루션을 쓰기도 하는걸로 알고 있어서, 그런 서비스를 쓰지 못하는 엔터프라이즈 단위의 서비스가 아닌 서비스들은 여기서 나온 것들을 가지고 유용하게 사용할수도 있을 것 같다.
 
-나중에 검색 인덱싱이 되면 후속 글이나 SEO 관련해서 어떤걸 더 하면 좋은지 글을 써보기로.
+나중에 검색 인덱싱이 되면 후속 글이나 SEO 관련해서 어떤걸 더 하면 좋은지 글을 써보는것도 좋을 것 같다.
